feat: 增加获得用户仓库接口
